--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
     <hr>
     <p id="psp-2">what i provide</p>
 <div class="ser-sec">
-    <div id="seri-1">
+    <div class="seri-1">
         <i class="fa-solid fa-pen"></i>
         <h3>Web Design</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim</p>
     </div>
-<div id="ser-2">
+<div class="seri-1">
     <i class="fa-solid fa-user"></i>
     <h3>Advertising</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
 </div>
-<div id="seri-3">
+<div class="seri-1">
     <i class="fa-sharp fa-solid fa-code"></i>
     <h3>Apps Design</h3>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
