--- a/index.html
+++ b/index.html
@@ -1,98 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-     <nav class="navbar">
+    <nav class="navbar">
         <div class="nav-part1">
-<p>Portfo<span class="lio">lio.</span></p>
+            <p>Portfo<span class="lio">lio.</span></p>
         </div>
         <div class="nav-part2">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Skills</a>
-        <a href="#">Teams</a>
-        <a href="#">Contact</a>
+            <a href="#">Home</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Skills</a>
+            <a href="#">Teams</a>
+            <a href="#">Contact</a>
         </div>
-     </nav>
-<header>
+    </nav>
+    <header>
 
-<div class="write">
-<p>Hello, my name is</p>
-<p id="spe">Prakash <span>Shahi</span> </p>
-<p id="spe-2">And I'm a <span class="sss">Youtuber</span>
+        <div class="write">
+            <p>Hello, my name is</p>
+            <p id="spe">Prakash <span>Shahi</span> </p>
+            <p id="spe-2">And I'm a <span class="sss">Youtuber</span>
 
-</p>
-<button>Hire me</button>
+            </p>
+            <button>Hire me</button>
 
-</div>
+        </div>
 
-<div id="pic">
+        <div id="pic">
 
-</div>
-
-
-
-</header>
-<div id="about">
-    <h2>About me</h2>
-    <hr>
-    <p id="psp">who i am</p>
-
-<div id="about-main">
-    <div id="pp">
-<img src="image/mannn.png" alt="">
-    </div>
-    <div id="ab">
-<h3>I'm Prakash and I'm a <span class="sss">Youtuber</span> </h3>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.
-
-</p>
-<button>Download CV </button>
-
-    </div>
-</div>
-
-</div>
-<div id="service">
-    <h2>My services</h2>
-    <hr>
-    <p id="psp-2">what i provide</p>
-<div class="ser-sec">
-    <div class="seri-1">
-        <i class="fa-solid fa-pen"></i>
-        <h3>Web Design</h3>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim</p>
-    </div>
-<div class="seri-1">
-    <i class="fa-solid fa-user"></i>
-    <h3>Advertising</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-</div>
-<div class="seri-1">
-    <i class="fa-sharp fa-solid fa-code"></i>
-    <h3>Apps Design</h3>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-</div>
+        </div>
 
 
-</div>
+
+    </header>
+    <div id="about">
+        <h2>About me</h2>
+        <hr>
+        <p id="psp">who i am</p>
+
+        <div id="about-main">
+            <div id="pp">
+                <img src="image/mannn.png" alt="">
+            </div>
+            <div id="ab">
+                <h3>I'm Prakash and I'm a <span class="sss">Youtuber</span> </h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem
+                    excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias
+                    fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab
+                    molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi
+                    ratione soluta quas culpa voluptatum repudiandae harum non.
+
+                </p>
+                <button>Download CV </button>
+
+            </div>
+        </div>
 
     </div>
+    <div id="service">
+        <h2>My services</h2>
+        <hr>
+        <p id="psp-2">what i provide</p>
+        <div class="ser-sec">
+            <div class="seri-1">
+                <i class="fa-solid fa-pen"></i>
+                <h3>Web Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim</p>
+            </div>
+            <div class="seri-1">
+                <i class="fa-solid fa-user"></i>
+                <h3>Advertising</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+            </div>
+            <div class="seri-1">
+                <i class="fa-sharp fa-solid fa-code"></i>
+                <h3>Apps Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+            </div>
+
+
+        </div>
+
+    </div>
+    <section class="myskill">
+        <div id="service--2">
+            <h2>My skills</h2>
+            <hr>
+            <p id="psp-3">what i know</p>
+            <div class="parts">
+                <div class="part-1">
+                    <h3>My creative skills & experiences.</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In itaque optio libero provident eum
+                        quaerat. Nulla delectus quia eligendi deserunt doloribus quod reiciendis omnis! Aperiam numquam
+                        explicabo autem iste inventore?
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id aliquid incidunt pariatur libero
+                        quasi ab commodi, facilis suscipit sequi perferendis dignissimos reprehenderit inventore vitae
+                        consectetur mollitia rem? Ducimus, facere suscipit?</p>
+                    <button class="buttooon">Read more</button>
+
+                </div>
+                <div class="part-2">
+                    <div class="items">
+                        <div class="item--1">
+                            <span>HTML</span>
+                            <span>85%</span>
+                        </div>
+                        <div class="item--2">
+                            <div class="bar">
+                                <div class="color-0"></div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="items">
+                        <div class="item--1">
+                            <span>CSS</span>
+                            <span>75%</span>
+                        </div>
+                        <div class="item--2">
+                            <div class="bar">
+                                <div class="color-1"></div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="items">
+                        <div class="item--1">
+                            <span>JavaScript</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="item--2">
+                            <div class="bar">
+                                <div class="color-2"></div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="items">
+                        <div class="item--1">
+                            <span>PHP</span>
+                            <span>75%</span>
+                        </div>
+                        <div class="item--2">
+                            <div class="bar">
+                                <div class="color-3"></div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="items">
+                        <div class="item--1">
+                            <span>MySQL</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="item--2">
+                            <div class="bar">
+                                <div class="color-4"></div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+
+
+            </div>
+
+
+
+
+        </div>
+
+    </section>
 
 
 
 
 
 
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
