--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -18,12 +19,12 @@
             <p>Portfo<span class="lio">lio.</span></p>
         </div>
         <div class="nav-part2">
-            <a href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Services</a>
-            <a href="#">Skills</a>
-            <a href="#">Teams</a>
-            <a href="#">Contact</a>
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">About</a>
+            <a href="#" class="nav-link">Services</a>
+            <a href="#" class="nav-link">Skills</a>
+            <a href="#" class="nav-link">Teams</a>
+            <a href="#" class="nav-link">Contact</a>
         </div>
     </nav>
     <header>
@@ -31,7 +32,7 @@
         <div class="write">
             <p>Hello, my name is</p>
             <p id="spe">Prakash <span>Shahi</span> </p>
-            <p id="spe-2">And I'm a <span class="sss">Youtuber</span>
+            <p id="spe-2">And I'm a <span class="sssss">Youtuber</span>
 
             </p>
             <button>Hire me</button>
@@ -55,7 +56,7 @@
                 <img src="image/mannn.png" alt="">
             </div>
             <div id="ab">
-                <h3>I'm Prakash and I'm a <span class="sss">Youtuber</span> </h3>
+                <h3>I'm Prakash and I'm a <span class="sssss">Youtuber</span> </h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem
                     excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias
                     fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab
@@ -184,11 +185,145 @@
         </div>
 
     </section>
+    <section class="teams">
+
+        <h2>My teams</h2>
+        <hr>
+        <p id="psp-t">who with me</p>
+        <div class="container">
+            <div class="containe--item">
+                <img src="image/standart.jpg" alt="">
+                <h3>Someone name1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi soluta labore libero nihil iste
+                    voluptas commodi, nulla facere quos tempora consectetur magni atque, cumque impedit accusantium,
+                    neque ipsam amet rerum!</p>
+            </div>
+            <div class="containe--item">
+                <img src="image/standart.jpg" alt="">
+                <h3>Someone name2</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi soluta labore libero nihil iste
+                    voluptas
+                    commodi, nulla facere quos tempora consectetur magni atque, cumque impedit accusantium, neque ipsam
+                    amet
+                    rerum!</p>
+            </div>
+
+            <div class="containe--item">
+                <img src="image/standart.jpg" alt="">
+                <h3>Someone name3</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi soluta labore libero nihil iste
+                    voluptas commodi, nulla facere quos tempora consectetur magni atque, cumque impedit accusantium,
+                    neque ipsam amet rerum!</p>
+            </div>
+            <div class="containe--item">
+                <img src="image/standart.jpg" alt="">
+                <h3>Someone name4</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi soluta labore libero nihil iste
+                    voluptas commodi, nulla facere quos tempora consectetur magni atque, cumque impedit accusantium,
+                    neque ipsam amet rerum!</p>
+            </div>
+            <div class="containe--item">
+                <img src="image/standart.jpg" alt="">
+                <h3>Someone name5</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi soluta labore libero nihil iste
+                    voluptas commodi, nulla facere quos tempora consectetur magni atque, cumque impedit accusantium,
+                    neque ipsam amet rerum!</p>
+            </div>
+            <div class="containe--item">
+                <img src="image/standart.jpg" alt="">
+                <h3>Someone name6</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi soluta labore libero nihil iste
+                    voluptas commodi, nulla facere quos tempora consectetur magni atque, cumque impedit accusantium,
+                    neque ipsam amet rerum!</p>
+            </div>
+            <div class="containe--item">
+                <img src="image/standart.jpg" alt="">
+                <h3>Someone name1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi soluta labore libero nihil iste
+                    voluptas commodi, nulla facere quos tempora consectetur magni atque, cumque impedit accusantium,
+                    neque ipsam amet rerum!</p>
+            </div>
+            <div class="containe--item">
+                <img src="image/standart.jpg" alt="">
+                <h3>Someone name2</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi soluta labore libero nihil iste
+                    voluptas
+                    commodi, nulla facere quos tempora consectetur magni atque, cumque impedit accusantium, neque ipsam
+                    amet
+                    rerum!</p>
+            </div>
+            <div class="buttonsss">
+                <button class="btn left-btn"><i class="fa-solid fa-chevron-right"></i>
+                </button> <button class="btn next-btn"><i class="fa-solid fa-chevron-right fa-rotate-180"></i>
+                </button>
+            </div>
+
+        </div>
+
+        <div class="dots">
+            <div class="dot dot--active" data-set="0"></div>
+            <div class="dot" data-set="1"></div>
+            <div class="dot " data-set="2"></div>
+            <div class="dot" data-set="3"></div>
+            <div class="dot" data-set="4"></div>
+            <div class="dot" data-set="5"></div>
+        </div>
+
+    </section>
+
+    <section class="myskills" id="contact">
+        <div id="service--2">
+            <h2>Contact me</h2>
+            <hr>
+            <p id="psp-3">get in touch</p>
+            <div class="part">
+                <div class="part1">
+                    <h3>Get in Touch</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga
+                        corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
+                    <div class="info">
+                        <p class="bla">Name</p>
+                        <p>Prakash Shahi</p>
+                    </div>
+                    <div class="info">
+                        <p class="bla">Address</p>
+                        <p>Surkhet, Nepal</p>
+                    </div>
+                    <div class="info">
+                        <p class="bla">Email</p>
+                        <p>abc@gmail.com</p>
+                    </div>
+                </div>
+                <div class="part2">
+                    <div class="ppp">
+                        <i class="fa-sharp fa-solid fa-angles-right fa-rotate-90 "></i>
+                        <button id="buut">Send message</button>
+                    </div>
+                </div>
+
+            </div>
 
 
 
 
 
+    </section>
+    <footer>
+
+
+    </footer>
+    <div class="special special-hidden">
+
+        <form>
+            <div class="papar">
+                <input type="text" placeholder="Name" id="dd">
+                <input type="text" placeholder="Email"></div>
+            <input type="text" placeholder="Subject">
+            <input type="text" placeholder="Message..">
+            <button>Send</button>
+        </form>
+    </div>
+    <div class="overla" id="win"></div>
 
     <script src="script.js"></script>
 </body>
