--- a/index.html
+++ b/index.html
@@ -18,16 +18,18 @@
         <div class="nav-part1">
             <p>Portfo<span class="lio">lio.</span></p>
         </div>
-        <div class="nav-part2">
-            <a href="#" class="nav-link">Home</a>
-            <a href="#" class="nav-link">About</a>
-            <a href="#" class="nav-link">Services</a>
-            <a href="#" class="nav-link">Skills</a>
-            <a href="#" class="nav-link">Teams</a>
-            <a href="#" class="nav-link">Contact</a>
+        <div class="nav-part2 left">
+            <a href="#Home" class="nav-link">Home</a>
+            <a href="#about" class="nav-link">About</a>
+            <a href="#service" class="nav-link">Services</a>
+            <a href="#myskill" class="nav-link">Skills</a>
+            <a href="#myteam" class="nav-link">Teams</a>
+            <a href="#contact" class="nav-link">Contact</a>
+
         </div>
+        <i id="btn-icon" class="fa-solid fa-bars"></i>
     </nav>
-    <header>
+    <header id="Home">
 
         <div class="write">
             <p>Hello, my name is</p>
@@ -95,7 +97,7 @@
         </div>
 
     </div>
-    <section class="myskill">
+    <section class="myskill" id="myskill">
         <div id="service--2">
             <h2>My skills</h2>
             <hr>
@@ -185,7 +187,7 @@
         </div>
 
     </section>
-    <section class="teams">
+    <section class="teams" id="myteam">
 
         <h2>My teams</h2>
         <hr>
@@ -309,7 +311,7 @@
 
     </section>
     <footer>
-
+        <p>Created By <a href="#">CodingNepal</a> | @ 2020 All rights reserved.</p>
 
     </footer>
     <div class="special special-hidden">
@@ -325,6 +327,9 @@
     </div>
     <div class="overla" id="win"></div>
 
+    <div class="up-btn b-hidden">
+        <i class="fa-solid fa-arrow-up "></i>
+    </div>
     <script src="script.js"></script>
 </body>
 
